added ordering to menu items

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -31,6 +31,6 @@ h3::first-letter {
 }
 
 a {
-    font-family: 'Freckle Face', cursive;
+    font-family: 'Roboto Slab', serif;
     font-size: 24px;
 }
