--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -4,6 +4,9 @@
     /* min-height: 400px; */
     height: 50vh;
 }
+.carousel-item {
+    background-color: black;
+}
 
 .carousel-img {
     position: relative;
@@ -35,9 +38,6 @@
 
 .logo {
     position: relative;
-    transform: translate(-50%, 0%);
-    left: 50%;
-    top: 50%;
     width: 40%;
     height: auto;
     /* box-shadow: 3px 3px 3px black; */
