--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,12 +4,14 @@
       <a class="navbar-brand d-none d-md-block" href="#">
         <div class="col-6">
           <div class="row">
-            <div class="col-lg-6 col-12">
-              <img class="img-container"
-                src="https://firebasestorage.googleapis.com/v0/b/brodys-192703.appspot.com/o/site-images%2Flogo-sm.png?alt=media&token=a058f344-4c1f-4e37-b6ed-9f951babdc98">
+            <div class="col-lg-6 col-12 px-0 d-flex align-items-center" style="height: 64px">
+              <img 
+              src="https://firebasestorage.googleapis.com/v0/b/brodys-192703.appspot.com/o/site-images%2Flogo-sm.png?alt=media&token=a058f344-4c1f-4e37-b6ed-9f951babdc98">
             </div>
             <div class="col-6 d-none d-lg-inline-block">
-              <h3>{{ barName | uppercase }}</h3>
+              <div class="h-100 d-flex align-items-center">
+                <h3>{{ barName | uppercase }}</h3>
+              </div>
             </div>
           </div>
         </div>
