moved side title to better fit, logo aligned correctly at small screen size

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <a class="anchor" id="about"></a>
 <div class="row bg">
-  <div class="col-sm-2 d-none d-md-block mx-auto">
+  <div class="col-sm-2 d-none d-md-block px-0">
     <app-page-side [title]="sideTitle"></app-page-side>
   </div>
 
