--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,9 +8,14 @@
               <img 
               src="https://firebasestorage.googleapis.com/v0/b/brodys-192703.appspot.com/o/site-images%2Flogo-sm.png?alt=media&token=a058f344-4c1f-4e37-b6ed-9f951babdc98">
             </div>
-            <div class="col-6 d-none d-lg-inline-block">
+            <div class="col-6 d-none d-xl-block">
               <div class="h-100 d-flex align-items-center">
                 <h3>{{ barName | uppercase }}</h3>
+              </div>
+            </div>
+            <div class="col-6 d-none d-lg-block d-xl-none">
+              <div class="h-100 d-flex align-items-center">
+                <h3>{{ barShort | uppercase }}</h3>
               </div>
             </div>
           </div>
@@ -29,19 +34,19 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="navbar-nav mr-0" data-toggle="collapse" data-target="#myNavbar">
         <li class="nav-item">
-          <a href="#top" class="nav-link m-2 menu-item nav-active">HOME</a>
+          <a href="#top" class="nav-link menu-item nav-active">HOME</a>
         </li>
         <li class="nav-item">
-          <a href="#menu" class="nav-link m-2 menu-item">MENU</a>
+          <a href="#menu" class="nav-link menu-item">MENU</a>
         </li>
         <li class="nav-item">
-          <a href="#drafts" class="nav-link m-2 menu-item">DRAFTS</a>
+          <a href="#drafts" class="nav-link menu-item">DRAFTS</a>
         </li>
         <li class="nav-item">
-          <a href="#events" class="nav-link m-2 menu-item">EVENTS</a>
+          <a href="#events" class="nav-link menu-item">EVENTS</a>
         </li>
         <li class="nav-item">
-          <a href="#contact" class="nav-link m-2 menu-item">CONTACT</a>
+          <a href="#contact" class="nav-link menu-item">CONTACT</a>
         </li>
       </ul>
     </div>
