--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -23,8 +23,7 @@ h4 {
 
 .side-pic {
     margin-bottom: 10px;
-    width: 20vh;
-    height: 20vh;
+    height: 20px;
 }
 
 .top-buffer {
@@ -32,8 +31,8 @@ h4 {
 }
 
 .tile {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 a.anchor {
