--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,9 @@
-<a class="anchor"  id="contact"></a>
+<a class="anchor" id="contact"></a>
 <div class="row bg">
-  <div class="col-sm-2 d-none d-md-block mx-auto">
+  <div class="col-sm-2 d-none d-md-block px-0">
     <app-page-side [title]="sideTitle" [darkMode]="true"></app-page-side>
   </div>
-  <div class="col-8 col-md-4 p-1">
+  <div class="col-6 col-md-4 p-1">
     <div class="row">
       <div class="col-12">
         <app-page-title [title]="header[0]" [darkMode]=true></app-page-title>
@@ -20,21 +20,21 @@
       </div>
     </div>
   </div>
-  <div class="col-4 col-md-6">
+  <div class="col-6">
     <div class="row top-buffer">
-      <div class="col-md-6 px-1 side-pic">
-        <img class="tile" [src]="tile[0]">
+      <div class="col-md-6 p-2">
+        <img style="width: 100%; height: 100%" [src]="tile[0]">
       </div>
-      <div class="col-md-6 px-1 side-pic">
-        <img class="tile" [src]="tile[1]">
+      <div class="col-md-6 p-2">
+        <img style="width: 100%; height: 100%" [src]="tile[1]">
       </div>
     </div>
-    <div class="row ">
-      <div class="col-md-6 px-1 d-none d-md-block side-pic">
-        <img class="tile" [src]="tile[2]">
+    <div class="row">
+      <div class="col-md-6 p-2 d-none d-md-block">
+        <img style="width: 100%; height: 100%" [src]="tile[2]">
       </div>
-      <div class="col-md-6 px-1 d-none d-md-block side-pic">
-        <img class="tile" [src]="tile[3]">
+      <div class="col-md-6 p-2 d-none d-md-block">
+        <img style="width: 100%; height: 100%" [src]="tile[3]">
       </div>
     </div>
   </div>
