--- a/src/app/draftlist/draftlist.component.html
+++ b/src/app/draftlist/draftlist.component.html
@@ -1,6 +1,6 @@
 <a class="anchor" id="drafts"></a>
 <div class="row bg">
-  <div class="col-sm-2 d-none d-md-block mx-auto">
+  <div class="col-sm-2 d-none d-md-block px-0">
     <app-page-side [title]="sideTitle" [darkMode]=true></app-page-side>
   </div>
 
