--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,12 +1,13 @@
 <a class="anchor" id="menu"></a>
-<div class="row bg" >
-  <div class="col-sm-2 d-none d-md-block mx-auto">
-    <app-page-side [title]="sideTitle"></app-page-side>
+<div class="row bg">
+  <div class="col-sm-2 d-none d-md-block px-0">
+    <div class="w-100 h-100">
+      <app-page-side [title]="sideTitle"></app-page-side>
+    </div>
   </div>
 
 
   <div class="col-sm-10 p-1">
-    <!-- <app-page-title [title]="pageTitle"></app-page-title> -->
     <app-category *ngFor="let category of categoryList" [category]="category"></app-category>
   </div>
 </div>
