--- a/src/app/page-side/page-side.component.html
+++ b/src/app/page-side/page-side.component.html
@@ -1,3 +1,7 @@
-<div class="side" [ngStyle]="shift">
- <h1  [ngClass]="{'side-title':true, 'light':!isDark, 'dark':isDark}" >{{title}}</h1>
-</div>
+<div class="col-12 h-100 px-0">
+    <div class="side-title d-flex justify-content-end align-items-start" 
+    [ngClass]="{'light':!isDark, 'dark':isDark}"
+    style="transform: translate(-50%, -50%) rotate(-90deg) translate(-50%, 25%)">
+    {{title}}
+  </div>
+  </div>
