added price to menu, added sort by to menu categories, removed overflow on body

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
 
   <div class="col-sm-6 p-1">
     <app-page-title [title]="pageTitle"></app-page-title>
-    <p>The Broderick Family have been local Jamul residents for the past 19 years.
+    <p>The Broderick Family have been local Jamul residents for the past {{year}} years.
       Craig, Beth, Cameron and Willie are the owners of this local establishment.
       The dream of the four is to create a family friendly environment that everyone can enjoy.
       The restaurant is a home away from home for us. The beauty of our place is that at any given
