--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,20 +33,20 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="navbar-nav mr-0" data-toggle="collapse" data-target="#myNavbar">
-        <li class="nav-item">
-          <a href="#top" class="nav-link menu-item nav-active">HOME</a>
+        <li class="nav-item d-flex align-items-center">
+          <a (click)="scrollToPosition('home')" class="nav-link menu-item nav-active">HOME</a>
         </li>
-        <li class="nav-item">
-          <a href="#menu" class="nav-link menu-item">MENU</a>
+        <li class="nav-item d-flex align-items-center">
+          <a (click)="scrollToPosition('menu')" class="nav-link menu-item">MENU</a>
         </li>
-        <li class="nav-item">
-          <a href="#drafts" class="nav-link menu-item">DRAFTS</a>
+        <li class="nav-item d-flex align-items-center">
+          <a (click)="scrollToPosition('drafts')" class="nav-link menu-item">DRAFTS</a>
         </li>
-        <li class="nav-item">
-          <a href="#events" class="nav-link menu-item">EVENTS</a>
+        <li class="nav-item d-flex align-items-center">
+          <a (click)="scrollToPosition('events')" class="nav-link menu-item">EVENTS</a>
         </li>
-        <li class="nav-item">
-          <a href="#contact" class="nav-link menu-item">CONTACT</a>
+        <li class="nav-item d-flex align-items-center">
+          <a (click)="scrollToPosition('contact')" class="nav-link menu-item">CONTACT</a>
         </li>
       </ul>
     </div>
