--- a/src/app/draftlist/draftlist.component.html
+++ b/src/app/draftlist/draftlist.component.html
@@ -6,7 +6,7 @@
 
   <div class="col-12 col-md-10 p-1">
     <app-page-title [title]="pageTitle"  ></app-page-title>
-    <div class="row pr-3">
+    <div class="row m-0">
       <!-- FOR LARGE SCREENS ONLY -->
       <div class="col-4 d-none d-sm-block">
         <div *ngFor="let draft of draftList; let i=index">
