--- a/src/app/events/event/event.component.css
+++ b/src/app/events/event/event.component.css
@@ -28,10 +28,19 @@ img {
     width: 100%;
     height: 100%;
     z-index: 1;
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .img-container {
     width: 100%;
     height:100%;
+    overflow: hidden;
     border: 1px solid black;
+    box-shadow: 5px 5px 5px black;
 }
+
+
+img:hover {
+    transform: scale(1.1);
+    opacity: .8;
+  }
