--- a/src/app/menu/item/item.component.html
+++ b/src/app/menu/item/item.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-8 col-md-6">
-    <h4>{{item.name}}</h4>
+    <h4 class="title">{{item.name}}</h4>
     <p>{{item.description}}</p>
+    <p class="price">{{item.price | currency}}</p>
   </div>
   <div class="col-4 col-md-6 text-center">
     <img style="height: 100px; width: auto"[src]="item.img.fbUrl" *ngIf="item.img">
